--- a/inventory.ini
+++ b/inventory.ini
@@ -1,2 +1,2 @@
 [webserver]
-34.16.197.241 ansible_user=ashamilyan ansible_ssh_private_key_file=/home/ashamilyan/.ssh/gcpConnect
+34.16.197.241 ansible_user=ashamilyan ansible_ssh_private_key_file=~/.ssh/id_rsa
