--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,16 @@ jobs:
       with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
+    - name: Add remote host to known hosts
+      run: ssh-keyscan -H 34.16.197.241 >> ~/.ssh/known_hosts
+      shell: bash
+
+    - name: Test SSH connection
+      run: |
+        echo "Testing SSH connection..."
+        ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ashamilyan@34.16.197.241 "echo SSH connection successful"
+      shell: bash
+
     - name: Run Ansible Playbook
       run: ansible-playbook -i inventory.ini playbook.yml
       shell: bash
