--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,18 +24,21 @@ jobs:
         pip install ansible
 
     - name: Add SSH key
-      uses: webfactory/ssh-agent@v0.7.0
+      uses: webfactory/ssh-agent@v0.5.3
       with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
     - name: Add remote host to known hosts
-      run: ssh-keyscan -H 34.16.197.241 >> ~/.ssh/known_hosts
+      run: |
+        echo "Adding remote host to known_hosts..."
+        ssh-keyscan -H 34.16.197.241 >> ~/.ssh/known_hosts
+        cat ~/.ssh/known_hosts
       shell: bash
 
     - name: Test SSH connection
       run: |
         echo "Testing SSH connection..."
-        ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ashamilyan@34.16.197.241 "echo SSH connection successful"
+        ssh -vvv -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no ashamilyan@34.16.197.241 "echo SSH connection successful"
       shell: bash
 
     - name: Run Ansible Playbook
