--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,12 @@ jobs:
       with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
+    - name: Debug SSH Host
+      run: echo "SSH_HOST: ${{ secrets.SSH_HOST }}"
+
     - name: Add VM to known hosts
       run: |
+        echo "Adding VM to known hosts..."
         ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
     - name: Test SSH connection
