--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,40 +1,34 @@
+---
 name: Deploy to VM
-
 on:
   push:
     branches:
       - main
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Setup SSH
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+      - name: Debug SSH Host
+        run: |
+          echo "SSH_HOST: ${{ secrets.SSH_HOST }}"
+      - name: Add VM to known hosts
+        run: |
+          echo "Adding VM to known hosts..."
+          ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+      - name: Test SSH connection
+        run: >
+          echo "Testing SSH connection..."
 
-    - name: Setup SSH
-      uses: webfactory/ssh-agent@v0.5.3
-      with:
-        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-    - name: Debug SSH Host
-      run: echo "SSH_HOST: ${{ secrets.SSH_HOST }}"
-
-    - name: Add VM to known hosts
-      run: |
-        echo "Adding VM to known hosts..."
-        ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
-
-    - name: Test SSH connection
-      run: |
-        echo "Testing SSH connection..."
-        ssh -vvv -o StrictHostKeyChecking=no ashamilyan@${{ secrets.SSH_HOST }} "echo SSH connection successful"
-      shell: bash
-
-    - name: Install Ansible
-      run: sudo apt-get update && sudo apt-get install -y ansible
-
-    - name: Run Ansible Playbook
-      run: ansible-playbook -i inventory.ini playbook.yml
-      shell: bash
+          ssh -vvv -o StrictHostKeyChecking=no ashamilyan@${{ secrets.SSH_HOST }} "echo SSH connection successful"
+        shell: bash
+      - name: Install Ansible
+        run: sudo apt-get update && sudo apt-get install -y ansible
+      - name: Run Ansible Playbook
+        run: ansible-playbook -i inventory.ini playbook.yml
+        shell: bash
